# AutoClickerSuite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: USER_GUIDE.md  USER_GUIDE_EN.md
installer/: installer.nsi
resources/: app.rc  resources.qrc
resources/themes/: dark.qss  light.qss
resources/translations/: app_en.ts  app_ru.ts
scripts/: build.bat  build.ps1  installer.nsi  package.bat  package.ps1
src/: main.cpp  version.h.in
src/app/: HotkeyManager.cpp  HotkeyManager.h  LanguageManager.cpp  LanguageManager.h  MainWindow.cpp  MainWindow.h  ProfileManager.cpp  ProfileManager.h  SettingsWidget.cpp  SettingsWidget.h  SplashScreen.cpp  SplashScreen.h  ThemeManager.cpp  ThemeManager.h  TrayManager.cpp  TrayManager.h
src/core/: InputSimulator.cpp  InputSimulator.h
src/keyboard/: KeyboardClicker.cpp  KeyboardClicker.h  KeyboardConfig.h  KeyboardWidget.cpp  KeyboardWidget.h
src/macro/: MacroConfig.cpp  MacroConfig.h  MacroEditor.cpp  MacroEditor.h  MacroPlayer.cpp  MacroPlayer.h  MacroRecorder.cpp  MacroRecorder.h  MacroWidget.cpp  MacroWidget.h
src/mouse/: MouseClicker.cpp  MouseClicker.h  MouseConfig.h  MouseWidget.cpp  MouseWidget.h
src/smart/: ColorMatcher.cpp  ColorMatcher.h  ImageMatcher.cpp  ImageMatcher.h  Scheduler.cpp  Scheduler.h  SmartConfig.h  SmartWidget.cpp  SmartWidget.h  WindowFinder.cpp  WindowFinder.h
src/utils/: Constants.h  Logger.cpp  Logger.h  Settings.cpp  Settings.h
